sql/src/test/resources/drill/window/queries/negative/q2.res
1.0	1	1
2.0	2	2
3.0	3	3
5.0	5	4
6.0	6	5
7.0	7	6
null	null	7
9.0	9	8
10.0	10	9
4.0	4	10
